<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.soccercounter.MainActivity">



    <TextView
        android:id="@+id/Title"
        style="@style/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Title" />

    <TextView
        android:id="@+id/Question"
        style="@style/AppTitle.Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Title"
        android:layout_marginTop="16dp"
        android:text="@string/Question" />

    <LinearLayout
        android:id="@+id/mainFramework"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Question"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TeamA" />
            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="16dp"
                android:hint="@string/HintTeamA">
                <requestFocus />
            </AutoCompleteTextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TeamB" />
            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="16dp"
                android:hint="@string/HintTeamB">
            </AutoCompleteTextView>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainFramework"
        android:layout_centerHorizontal="true"
        android:text="@string/StartGame"
        android:onClick="startGame"
        android:layout_marginTop="32dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/football"
        android:layout_below="@id/buttonStartGame"
        android:layout_marginTop="32dp"/>

</RelativeLayout>
